# camTranslator

./: .gitignore  AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  Configuration.cpp  Configuration.h  ImageAdjuster.cpp  ImageAdjuster.h  Translator.cpp  Translator.h  main.cpp  raylib_opencv_headers.h
